# QTree

./: CMakeLists.txt  Edge.h  Facet.h  QTree.h  Quad.h  Readme.md  Simplex.h  SimplexContainer.h  Timer.h  Triangle.h  Vec2.h  Vertex.h  app_util.h  main.cpp
scripts/: plot_quadtree.py
